	  connection (POLLHUP), select() must report a read-ready event.  This
	  is how the standard select() interface is supposed to work:  In the case
	  of loss-of-connection, select() reports read-ready.  The next time you
	  read from the socket, you detect the end-of-connection event.  Change
	  submitted by Max Nekludov.
	* arch/arm/src/armv7-m/up_fpu.S and arch/arm/src/stm32/stm32_vectors.S:  Fix
	  lazy FPU register saving with CONFIG_ARCH_FPU is set in the configuration.
	* arch/arm/src/armv7-m:  Lazy saving of floating point registers on context
	  switches now seems to be functional.
	* net/uip/uip_tcpinput.c:  Fix a TCP protocol error reported by Max Nekludov.
	* configs/stm3240g-eval, configs/stm32f40discovery:  Add changes to support
	  building with the Atollic "Pro" toolchain.
	* Makefile:  Use the more common .hex extension for Intel hex files instead of
	  more precise .ihx extension.  This change has ripple effects to many build-
	  related scripts and programs and could cause some short-term problems.
	* configs/stm3240g-eval/, arch/arm/src/stm32/up_allocateheap.c:  Add support
	  for the 16-mbit SRAM on-board the STM3240G-EVAL board.
	* drivers/usbdev/cdcacm.c and include/nuttx/usbdev/cdcacm.h:  The CDC/ACM
	  driver can now be dynamically connected and disconnected from the host
	  under software control.
	* include/nuttx/arch.h, configs/stm3240g-eval/src/up_cxxinitialize.c, and
	  configs/stm3240g-eval/src/up_cxxinitialize.c:  Add support for C++ static
	  initializers.
	* net/setsockopt.c, net/getsockopt.c, net/bind.c, net/socket.c:  Add more
	  low level, thread-independent socket interfaces for use within the OS.
	  Some of these are currently used by the FTP controlling terminal.  More will
	  be used to support the NFS file system currenly underwork.
	* include/nuttx/net/:  Major re-organization of networking headerf files.
	  Moved all non-standard, NuttX-specific header files from include/net and
	  include/nuttx into include/nuttx/net.